--- a/music-flash/package.json
+++ b/music-flash/package.json
@@ -14,11 +14,13 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "firebase": "^9.10.0",
+    "firebase": "^8.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.4",
     "redux": "^4.2.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
