--- a/music-flash/package.json
+++ b/music-flash/package.json
@@ -18,11 +18,12 @@
     "firebase": "^8.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.4",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +53,9 @@
   },
   "devDependencies": {
     "@redux-devtools/core": "^3.13.1",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "eslint": "^8.29.0",
