--- a/music-flash/package.json
+++ b/music-flash/package.json
@@ -60,6 +60,7 @@
     "@typescript-eslint/parser": "^5.45.1",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
+    "jest": "^27.5.1",
     "react-router-dom": "^6.4.1"
   }
 }
